[project]
name = "pc_card_control"
version = "1.0.0"
authors = [
  { name="Jonathan Ambrose", email="jambrose@redwiretechnologies.us" },
]
description = "A Python package for controlling the Tellurium and Selenium personality cards on RWT SDRs."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/redwiretechnologies/pc_card_control"
Issues = "https://github.com/redwiretechnologies/pc_card_control/issues"
